Expanded Cheat Menu:
### Changed:
- Game>Change Map has resources to choose, and merged dialogs to make it simpler.
### Fixed:
- Set Production would set objects of a different class.

Research Filter 0.5:
Green Planet.

Omega Unlocks All Slowly:
The Omega Telescope will unlock a new breakthrough each Sol.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
-302535920000406,Copy text to the clipboard.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -307,6 +306,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920000406,Copy text to the clipboard.,
 302535920000313,OnMsg/Msg blacklist,
 302535920000310,Skip Undefined Globals,
 302535920000311,"Stop the ""<color yellow>Attempt to use an undefined global</color>"" msgs.
@@ -339,7 +339,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000474,Fiddling around in the editor mode can break the menu / shortcuts added by ECM (use this to fix or alt-tab).,
 302535920001308,Settings,
 302535920000734,Clear Log,
-302535920001026,Show File Log,
+302535920001026,Update Text,
 302535920001091,Flushes log to disk and displays it.,
 302535920001152,Clear out the console log (F9 also works).,
 302535920001154,Displays the log text in a window you can copy sections from.,
@@ -353,7 +353,6 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001138,Execute this command in the console.,
 302535920001159,Any .lua files in <color green>%s</color>.,
 302535920000071,Show Mods Log,
-302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000628,"Close the examine dialog
@@ -523,7 +522,8 @@ It won't be visible unless the ""%s"" checkbox is enabled.
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
 302535920000078,Custom Value,
 302535920000079,* Use this custom value,
-302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, and probably double left-clicking <left_click>).",
+302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, and probably double left-clicking <left_click>).
+This will always send back all items (not selection).",
 302535920000082,"Check this for ""All of type"" to only apply to connected grid.",
 302535920000085,"Auto-refresh list every ""Amount"".",
 302535920000086,Manually refresh the list.,
@@ -768,7 +768,7 @@ This will switch to a new map.",
 302535920000327,Map Exploration,
 302535920000328,"Scanning, deep scanning, core mines, and alien imprints.",
 302535920000330,"Advance to next part, show what part you're on, or remove mysteries.",
-302535920000331,Start Mystery,
+302535920000331,Mystery Start,
 302535920000332,"Pick and start a mystery (with instant start option).
 Certain mysteries need certain objects which get placed when the map is generated on a new game (the green rocks one for instance).",
 302535920000334,Show the disasters list and optionally start one.,
@@ -1137,10 +1137,6 @@ Sounds like a borked save; send me the file and I'll take a look",
 302535920000859,Anim State,
 302535920000860,Set Anim State,
 302535920000861,Current State: <color green>%s</color>,
-302535920000866,Set MissionParams NewMap,
-302535920000867,"Attention: You must press ""OK"" for these settings to take effect before choosing a map!
-
-See the examine list for ids.",
 302535920000868,Choose Map,
 302535920000869,"This <color red>%s</color> doesn't have GetPath function, something is probably borked.",
 302535920000871,Doesn't seem to be an object that moves.,
