Expanded Cheat Menu:
- Changed add cheats pane func to check "ip" templates for sectionCheats.

Add Progress To Training Section 0.3:
School now shows the percent needed to get traits from the school.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Add Progress To Training Section/changes.txt
+++ b/Mods ChoGGi/Add Progress To Training Section/changes.txt
@@ -1,2 +1,5 @@
+v0.3
+School now shows the percent needed to get traits from the school.
+
 v0.2
 Added progress to Sanatorium/School (mouseover lifetime info).
