Expanded Cheat Menu:
### Changed:
- Exposed delay option for Debug>Path Markers>GameTime (and fixed some minor issues with markers).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -3,6 +3,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000967,Delay in ms between updating text.,
 302535920000388,Works after colonist idle.,
 302535920000390,Activated when colonist changes job.,
 302535920000400,Works after daily update.,
@@ -442,7 +443,6 @@ Decompiled code won't scroll correctly as the line numbers are different.",
 302535920001425,<left_click> Toggle <right_click> Set Delay,
 302535920001426,Various tools to use.,
 302535920001422,Right-click <right_click> to change refresh delay.,
-302535920000967,Delay in ms between updating text.,
 302535920001248,Sort normally or backwards.,
 302535920001397,"Not the actual properties (see object.properties for those).
 
@@ -1067,6 +1067,9 @@ Only works on colonists that have yet to spawn (maybe).",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000413,Delay,
+302535920000415,Delay in ms between updating paths (0 to update every other render).,
+302535920000416,Delay isn't a valid class.,
 302535920000049,Loading Screen Log,
 302535920001621,Be able to see the console log (and other dialogs) during the loading screen.,
 302535920001591,Show Grid Small,
