Expanded Cheat Menu:
### Changed:
- Examine:
- > "All" checkbox wasn't parsing ._index for metatables.

- Cleaned up Strings.lua
- Examine wasn't opening nil or "" properly.

Mods:
Domes: Limit Births:
Adds a slider to domes to limit amount of children born in each dome.
The slider will stop babies from being born in that dome (nothing else).
It defaults to 0 (vanilla functionality), raise it to set a limit.
Click the title to toggle between changing the value for that dome or all domes.

Playground: Upgrade Slots:
Adds upgrades to change the visitor capacity to 12 24 64 (also increases electricity consumption).
The second/third upgrades will be unlocked after the first/second is built once.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -357,6 +357,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000071,Show Mods Log,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920000417,Null reference,
 302535920000628,"Close the examine dialog
 Hold <color green>Shift</color> to close all ""grouped"" examine dialogs (any ex dlg opened from an ex dlg).
 Hold <color green>Ctrl</color> to close <color red>all</color> ECM dialogs.",
