Expanded Cheat Menu:
- fixed that ECM Sez: bad string id? 302535920000000 from last update.

### Fixed:
- Force Story Bits: Rover/Drone/Selected checkboxes didn't work properly.

Mods:
Cleaned up code.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -526,8 +526,7 @@ It won't be visible unless the ""%s"" checkbox is enabled.
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
 302535920000078,Custom Value,
 302535920000079,* Use this custom value,
-302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, and probably double left-clicking <left_click>).
-This will always send back all items (not selection).",
+302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, or double left-clicking <left_click>).",
 302535920000082,"Check this for ""All of type"" to only apply to connected grid.",
 302535920000085,"Auto-refresh list every ""Amount"".",
 302535920000086,Manually refresh the list.,
@@ -1108,8 +1107,7 @@ You need my HelperMod installed to be able to use this.",
 302535920001418,Sets the size of the Building/Flight grid.,
 302535920001419,Follow Mouse Grid Trans,
 302535920001420,How transparent the Building grid is.,
-302535920001359,Start or display the msg from a story bit.,
-302535920001416,Force,
+302535920001359,Test activate a story bit.,
 302535920001358,Group,
 302535920001382,Game Time,
 302535920001368,Sound FX,
