Expanded Cheat Menu:
- Got rid of that persist error on saving.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -299,7 +299,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000502,Treat uppercase and lowercase as distinct.,
 302535920001305,Find Within,
 302535920001306,Enter text to find,
-302535920001304,Set how many levels within this table we check into (careful making it too large).,
+302535920001304,Set how many levels within this table we search. <color red>Warning</color>: O(n).,
 302535920001529,"Press <color green>Enter</color> to select next found text, and <color green>Ctrl-Enter</color> to scroll to previous found text.",
 302535920001474,Code Highlight,
 302535920001475,Toggle lua code highlighting.,
