Expanded Cheat Menu:
- Cleaned up some minor issues (log spam mostly).
- Optimised Examine:SetObj for auto-refresh.

### Removed:
- Ctrl-Shift-Space: Merged into Ctrl-Space (selection overrides last built).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -427,7 +427,7 @@ Mod code works fine, as well as HG github code. HG code needs to be placed at: "
 Example: ""Source/Lua/_const.lua""
 
 Decompiled code won't scroll correctly as the line numbers are different.",
-302535920000264,Defaults to ObjectHierarchyBBox(obj) if it can't find a func.,
+302535920000264,Defaults to obj:GetObjectBBox() if it can't find a func.,
 302535920001514,Toggle visibility of an input box for executing code.,
 302535920001515,Press enter to execute code.,
 302535920001516,o = examined object,
@@ -478,7 +478,7 @@ Press once to clear this examine, again to clear all.",
 302535920001001,ECM: Slight issue with <color green>%s</color> you may safely ignore the following error or three.,
 302535920000520,Parents,
 302535920000525,Ancestors,
-302535920000553,Examine parent and ancestor objects.,
+302535920000553,Examine parent and ancestor classes.,
 302535920000414,Are you sure you wish to delete <color red>%s</color>?,
 302535920000228,Assign to,
 302535920000043,"<color green>Enter</color> to scroll to next found text
@@ -1815,8 +1815,7 @@ Restart to set disabled.",
 302535920001346,Random Colour,
 302535920001347,Show Console,
 302535920001348,Restart,
-302535920001349,Place Last Constructed Building,
-302535920001350,Place Last Selected Object,
+302535920001350,Place Last Selected/Constructed Building,
 302535920010000,math.%s not implemented yet.,
 302535920010001,bad argument #%s to 'math.%s' (%s),
 302535920010002,zero,
