Expanded Cheat Menu:
- Added pasture animals to Examine>Attaches.
- Removed useless Reload ECM Menu, alt-tabbing sometimes disables keybindings (alt-tab again to fix).

Mods:
All Animals In Pastures:
Adds all the animals to the pasture breeds.
Mmmmm dog meat.
Yes, I know the tortoise does a conga line out the door, but I don't want to fix it.
For the non-pasture animals, I got lazy and copied stats (you can see from which in the tooltip).
Suggestions?
I can't put space llamas in a pasture since it has no walking animation.

Drones Harvest Rocks 0.2:
Broke Salvage (thanks McKaby).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Dome Teleporters/changes.txt
+++ b/Mods ChoGGi/Dome Teleporters/changes.txt
@@ -2,7 +2,7 @@ v0.7
 Tunnels.
 
 v0.6
-Green Planet.
+Armstrong update.
 Changed the construction controller to use built-in funcs instead of copy pasta.
 
 v0.5
