Expanded Cheat Menu:
- Shows enabled status for game rules in Mission>Game Rules.

### Fixed:
- Cloning wasn't updating the new deposit (thanks McKaby).
- Remove Sponsor Limits didn't work until restart.

Mods:
Rocket: Pin Enable:
Adds the pin button back to rockets.

Show Infobar Planetary View:
Shows Infobar when planetary view is opened (pushes terraform bar down).

Passenger Rocket Tweaks 0.5:
Specialisation count section is now optional (default: disabled).
Addd Mod Options:
More Spec Info: Show more specialist info.
Position Pass List: Enable changing position of passenger list.
PosX/PosY: Margins to use for list.

Triboelectric Scrubbers Clean Dome Buildings 0.3:
Armstrong (thanks Brainrot83).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/OnMsg Print/changes.txt
+++ b/Mods ChoGGi/OnMsg Print/changes.txt
@@ -7,7 +7,7 @@ ApplyModOptions
 BreathableAtmosphereChanged
 CheatStopDisaster
 ClosePlanetaryView
-ConstructionSitePlace (possible mistake, as ConstructionSitePlaced exists)
+ConstructionSitePlace
 ConstructionSiteRemoved
 CropProduced
 CurrentlyEditedModItemsChosen
