Expanded Cheat Menu:
- Sped up PlantRandomVegetation func.

Mods:
Random Banners 0.3:
Fixed not having all flags show up with Change Skin button (thanks D_A_R_K_N_E_S_S).
Change Skin is now consistent about the order of flags.

Restore Request Maintenance 1.0:
Armstring (thanks misukhanov).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Passenger Rocket Tweaks/changes.txt
+++ b/Mods ChoGGi/Passenger Rocket Tweaks/changes.txt
@@ -1,6 +1,6 @@
 v0.5
 Specialisation count section is now optional (default: disabled).
-Addd Mod Options:
+Added Mod Options:
 More Spec Info: Show more specialist info.
 Position Pass List: Enable changing position of passenger list.
 PosX/PosY: Margins to use for list.
