--- a/Mods ChoGGi/Dome Teleporters/todo.txt
+++ b/Mods ChoGGi/Dome Teleporters/todo.txt
@@ -10,11 +10,11 @@ self:RemovePFTunnel()
 
 lock behind breakthrough
 
-Longer Tunnels Tech have 2 version. 1 for Mod Config (Cheat Mod: Long Tunnels), 2 for reaserch(Longer Tunnels Tech). 
+Longer Tunnels Tech have 2 version. 1 for Mod Option (Cheat Mod: Long Tunnels), 2 for reaserch(Longer Tunnels Tech).
 your mod need second version.
-like this 
+like this
 
 Dome Teleporters
-Researching these techs allows the player to build teleport at longer distances. the Engineering tree and another to the Breakthrough tree. 
+Researching these techs allows the player to build teleport at longer distances. the Engineering tree and another to the Breakthrough tree.
 ENGINEERING: Improved Teleport (+50% distance)
 BREAKTHROUGH: Advanced Teleport (Unlimited Distance)
