--- a/Mods ChoGGi/Lock Residence/changes.txt
+++ b/Mods ChoGGi/Lock Residence/changes.txt
@@ -1,5 +1,5 @@
 v0.3
-Changed Lock Workplace to Lock Residence in MCR.
+Changed Lock Workplace to Lock Residence in mod options.
 
 v0.2
 Fix for buttons being too visible.
