--- a/Mods ChoGGi/Disable Selection Panel Sizing/changes.txt
+++ b/Mods ChoGGi/Disable Selection Panel Sizing/changes.txt
@@ -2,4 +2,4 @@ v0.3
 Added option to add scrollbars (buggy, has flickering).
 
 v0.2
-Added Mod Config Reborn option to re-enable sizing.
+Added Mod Option to re-enable sizing.
