--- a/Mods ChoGGi/Lock Workplace/changes.txt
+++ b/Mods ChoGGi/Lock Workplace/changes.txt
@@ -2,7 +2,7 @@ v1.1
 Fix for buttons being too visible.
 
 v1.0
-Included Mod Config Reborn option to force workers to never change workplace (may cause issues).
+Included Mod Option to force workers to never change workplace (may cause issues).
 
 v0.9
 Gagarin.
