Expanded Cheat Menu:
- Code cleanup.

More Terrain Rocks 0.3:
Mod Option to change the cost of rocks (larger rocks, small cost 1 waste rock).

Passenger Rocket Tweaks 0.6:
Added mod option to remove the rocket/planet.

RC Remote 0.3:
Shift to toggle high speed.

Research Filter 0.6:
Added mod option to hide completed tech.

Show Resource Overview 0.4:
Updated for Armstrong (added waste rock/seeds info).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/More Terrain Rocks/changes.txt
+++ b/Mods ChoGGi/More Terrain Rocks/changes.txt
@@ -1,2 +1,5 @@
+v0.3
+Mod Option to change the cost of rocks (larger rocks, small cost 1 waste rock).
+
 v0.2
 Build menu issue when certain mods are installed.
