--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID, Text, Translation, Old Translation, Gender
-302535920000219,Export viewed image to <color green>%s</color>.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -115,6 +114,7 @@ ID, Text, Translation, Old Translation, Gender
 302535920001456,Consumed,
 302535920001453,Completed,
 302535920000854,Results Found,
+302535920000219,Export viewed image to <color green>%s</color>.,
 302535920000109,Invalid Image,
 302535920001617,Toggle opening all dome glass (for screenshots?).,
 302535920001598,Reset shuttle control amount to default.,
@@ -325,6 +325,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920000473,Flush Log,
+302535920000474,Flushes log to file.,
 302535920000406,Copy text to the clipboard.,
 302535920000313,OnMsg/Msg blacklist,
 302535920000310,Skip Undefined Globals,
@@ -1595,6 +1597,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000221,See log for any batch errors.,
 302535920001586,All Done!,
 302535920001572,Warning: Will instantly crash SM when calling it a second time.,
 302535920000323,Modding,
