--- a/Mods ChoGGi/Show Resource Overview/changes.txt
+++ b/Mods ChoGGi/Show Resource Overview/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Updated for Armstrong (added waste rock/seeds info).
+
 v0.3
 Broke in Gagarin (thanks Rentha).
 Changed default shortcut from O to [ (O is mission goals).
